# vortex

./: .gitignore  404.html  README.md  chapter_1.html  chapter_2.html  chapter_2_1.html  chapter_2_2.html  chapter_2_3.html  chapter_3.html  chapter_4.html  chapter_4_1.html  chapter_4_2.html  chapter_5.html  chapter_6.html  chapter_7.html  chapter_8.html  chapter_9.html  index.html  package-lock.json  package.json  print.html  searchindex.js  searchindex.json
.github/workflows/: contract-test.yml  deploy.yml  main.yml
circuits/: circuit.circom  encrypt_vote.circom  merkle.circom  multisig.circom  registration_utils.circom  signature.circom  vote_encrypted.circom  vote_fallback.circom
contract/: compute_subroots.sh
contract/src/: ClaimKind.sol  DataStructs.sol  ExampleClaimKind.sol  IClaimKind.sol  IOptimisticPool.sol  MerkleMountainRange.sol  OpPool-Nouns.sol  OptimisticPool.sol  OptimisticPool1.sol  PoseidonClaimKind.sol  Router.sol  TestNouns.sol  TestPool.sol  VoterRegistry.sol  Voting.sol
contract/src/interfaces/: IRouter.sol
contract/test/: PoseidonClaimKind.t.sol
gh-pages/: book.toml
gh-pages/src/: SUMMARY.md  chapter_1.md  chapter_2.md  chapter_2_1.md  chapter_2_2.md  chapter_2_3.md  chapter_3.md  chapter_4.md  chapter_4_1.md  chapter_4_2.md  chapter_5.md  chapter_6.md  chapter_7.md  chapter_8.md  chapter_9.md
relayer/: Cargo.toml
relayer/src/: main.rs
scripts/: poseidon_gen.js
