[package]
name = "relayer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
clap = { version = "4.3.10", features = ["derive"] }
electron-rs = { git = "https://github.com/Electron-Labs/electron-rs" }
ethers = "2.0.7"
eyre = "0.6.8"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
